# mrs_msgs

./: .gitignore  .gitlab-ci.yml  .test_build.sh  .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  copy_from_ros1.sh  index-msg.html  index.html  link_msg_files.sh  msg_list.txt  package.xml  srv_list.txt  test_msgs.sh
.ci/: deploy_key_github.enc  docs.sh
.github/workflows/: docs.yml  main.yml  ros_package_build_filip.yml
msg/: Action.html  Action.msg  AloamgarmDebug.html  Altitude.html  AltitudeStateNames.html  AltitudeStateNames.msg  AltitudeType.html  AttitudeCommand.html  BacaProtocol.html  BacaProtocol.msg  BatteryDiagnostics.html  Bestpos.html  Bestpos.msg  Bestvel.html  Bestvel.msg  BoolStamped.html  BumperStatus.html  BumperStatus.msg  ConstraintManagerDiagnostics.html  ConstraintManagerDiagnostics.msg  ControlError.html  ControlManagerDiagnostics.html  ControlManagerDiagnostics.msg  ControllerDiagnostics.html  ControllerStatus.html  CustomTopic.html  DynamicsConstraints.html  EspOdometry.html  EstimatedState.html  EstimationDiagnostics.html  EstimatorCorrection.html  EstimatorDiagnostics.html  EstimatorInput.html  EstimatorOutput.html  EstimatorType.html  EulerAngles.html  Float64.html  Float64ArrayStamped.html  Float64MultiArrayStamped.html  Float64Stamped.html  (+138 more)
msg/aerial_core/: Action.msg
msg/bumper/: Histogram.msg  ObstacleSectors.msg
msg/control_manager/: AttitudeCommand.msg  ConstraintManagerDiagnostics.msg  ControlManagerDiagnostics.msg  GainManagerDiagnostics.msg  PositionCommand.msg  Reference.msg  So3Gains.msg  TrackerConstraints.msg  TrackerStatus.msg  TrajectoryReference.msg
msg/diagnostics/: MavrosDiagnostics.msg
msg/general/: ImageLabeledArray.msg  NimbroTest.msg  PoseWithCovarianceIdentified.msg  RangeWithCovarianceArrayStamped.msg  RangeWithCovarianceIdentified.msg  Sphere.msg  StringStamped.msg
msg/gnss/: Bestvel.msg  GPSFix.msg  Gpgga.msg  Gpgsa.msg  Gpgst.msg  Gpgsv.msg  Gprmc.msg  GpsInfo.msg  GpsStatus.msg  Gpvtg.msg  RtkFixType.msg  Time.msg
msg/gripper/: GripperDiagnostics.msg
msg/hw_api/: HwApiActuatorCmd.msg  HwApiAltitude.msg  HwApiAttitudeCmd.msg  HwApiAttitudeRateCmd.msg  HwApiCapabilities.msg  HwApiControlGroupCmd.msg  HwApiDiagnostics.msg  HwApiMode.msg  HwApiRcChannels.msg  HwApiStatus.msg  HwApiTranslationCmd.msg
msg/mav_manager/: AttitudeCommand.msg  PositionCommand.msg
msg/mpc_tracker/: FuturePointInt8.msg  FutureTrajectory.msg  FutureTrajectoryInt8.msg  MpcPredictionFullState.msg  MpcTrackerDiagnostics.msg  TrackerDiagnostics.msg  TrackerPointStamped.msg  TrackerTrajectory.msg
msg/mrs_gripper/: GripperDiagnostics.msg
msg/mrs_hw_modules/: BigDofecStatus.msg
msg/mrs_llcp/: Llcp.msg
msg/mrs_pcl_tools/: PclToolsDiagnostics.msg
msg/mrs_serial/: BacaProtocol.msg  ParachuteDiagnostics.msg  SerialRaw.msg
msg/nmea_navsat_driver/: RtkGpsLocal.msg
msg/odometry/: Altitude.msg  AltitudeStateNames.msg  AltitudeType.msg  EspOdometry.msg  EstimatedState.msg  EstimatorType.msg  GpsData.msg  HeadingStateNames.msg  HeadingType.msg  LkfStates.msg  ModelState.msg  OdometryDiag.msg  OdometryMode.msg  RtkGps.msg  UavState.msg  lkfStates.msg
msg/ouster/: OusterInfo.msg
msg/parachute/: ParachuteDiagnostics.msg
msg/passthrough_tracker/: PassthroughTrackerCommand.msg
msg/pathfinder/: PathfinderDiagnostics.msg
msg/profiler/: ProfilerUpdate.msg
msg/radar/: RadarData.msg
msg/robot_diagnostics/: UavDiagnostics.msg
msg/rviz_plugins/: RvizCylinder.msg  RvizCylinderArray.msg
msg/speed_tracker/: SpeedTrackerCommand.msg
msg/swarming/: SwarmingCommand.msg
msg/sxd/: SxdDiagnostics.msg  SxdHistogram.msg  SxdMeasurement.msg
msg/tersus_gps/: Bestpos.msg  Range.msg  TersusMessageHeader.msg  Trackstat.msg  TrackstatChannel.msg
msg/trajectory_generation/: Path.msg  PathWithVelocity.msg
msg/uav_manager/: AttitudeCommand.msg  BoolStamped.msg  ControlManagerDiagnostics.msg  ControllerStatus.msg  PositionCommand.msg  ReferenceList.msg  ReferenceStamped.msg  So3Gains.msg  TrackerStatus.msg
msg/uav_managers/: AloamgarmDebug.msg  ControlManagerDiagnostics.msg  ControllerDiagnostics.msg  DynamicsConstraints.msg  EstimationDiagnostics.msg  EstimatorInput.msg  Obstacles.msg  PathReference.msg  PositionCommand.msg  ReferenceArray.msg  SafetyAreaManagerDiagnostics.msg  SafetyAreaStatus.msg  SafetyBorder.msg  TrackerCommand.msg  TrackerStatus.msg  TrajectoryReference.msg  UavManagerDiagnostics.msg  UavState.msg  VelocityReference.msg
msg/uav_status/: NodeCpuLoad.msg  UavStatus.msg  UavStatusShort.msg
msg/uvdar/: ImagePointsWithFloatStamped.msg
src/: main.cpp
srv/: BumperParamsSrv.html  ChangeAltEstimator.html  ChangeEstimator.html  ChangeHdgEstimator.html  ChangeState.html  ConstraintsOverride.html  DynamicsConstraintsSrv.html  Float64Srv.html  Float64StampedSrv.html  GazeboApplyForce.html  GazeboApplyForce.srv  GazeboAttach.html  GazeboAttachTyped.html  GazeboAttachTyped.srv  GazeboDeleteModel.html  GetFloat64.html  GetPathSrv.html  OffsetOdom.html  PathSrv.html  PlannerTask.html  PlannerTask.srv  ReferenceSrv.html  ReferenceStampedSrv.html  SetInt.html  String.html  TrajectoryReferenceSrv.html  TrajectoryReferenceSrv.srv  TransformPoseSrv.html  TransformReferenceArraySrv.html  TransformReferenceSrv.html  TransformReferenceSrv.srv  TransformVector3Srv.html  ValidateReference.html  ValidateReference.srv  ValidateReferenceArray.html  ValidateReferenceList.html  ValidateReferenceList.srv  Vec1.html  Vec4.html  Vec4.srv  (+2 more)
srv/control_manager/: TrackerConstraintsSrv.srv  TrajectoryReferenceSrv.srv
srv/gazebo_ros_interface/: ApplyForce.srv  Delete.srv  GazeboApplyForce.srv  GazeboAttach.srv  GazeboAttachTyped.srv  GazeboDeleteModel.srv
srv/general/: NimbroTestSrv.srv
srv/llcp/: SetServo.srv  SetTrigger.srv
srv/mav_manager/: SwitchController.srv  TrackerConstraints.srv
srv/mpc_tracker/: Gains.srv  MpcMatrix.srv  TrackerTrajectorySrv.srv
srv/mrs_hw_modules/: BigDofecLaunch.srv  BigDofecSalvo.srv  BigDofecSetLeds.srv  BigDofecSetPWM.srv  LedStripDriver.srv
srv/mrs_multimaster/: ChangeState.srv
(+19 files in other folders)
